[tool.poetry]
name = "faapi"
version = "3.7.1"
description = "Python module to implement API-like functionality for the FurAffinity.net website."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/FAAPI"
repository = "https://github.com/FurryCoders/FAAPI"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/FurryCoders/FAAPI/blob/main/CHANGELOG.md"
"Source" = "https://github.com/FurryCoders/FAAPI"
"Download" = "https://pypi.org/project/faapi/#files"
"Bug Reports" = "https://github.com/FurryCoders/FAAPI/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
cfscrape = "^2.1.1"
lxml = "^4.8.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
