[tool.poetry]
name = "faapi"
version = "3.11.11"
description = "Python module to implement API-like functionality for the FurAffinity.net website."
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/FurryCoders/FAAPI"
repository = "https://github.com/FurryCoders/FAAPI"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/FurryCoders/FAAPI/blob/main/CHANGELOG.md"
"Source" = "https://github.com/FurryCoders/FAAPI"
"Download" = "https://pypi.org/project/faapi/#files"
"Bug Reports" = "https://github.com/FurryCoders/FAAPI/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.5"
lxml = "^6.0.1"
python-dateutil = "^2.9.0"
bbcode = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
types-beautifulsoup4 = "^4.11.6"
flake8 = "^6.0.0"
coverage = "^7.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
